Change title and premise in index.html
Updated the title and premise text for the game.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Talahula - Ang Wordle ng Pilipinas</title>
+    <title>Talahula - Salitang Pinoy, hulaan mo!</title>
+    <link rel="icon" type="image/png" href="talahulafinal.png">
     <style>
         :root {
             /* --- FILIPINO FLAG PALETTE --- */
@@ -249,7 +250,7 @@
         </div>
 
         <div class="premise">
-            <p><strong>Ang Wordle ng Pilipinas.</strong></p>
+            <p><strong>Salitang Pinoy, hulaan mo!</strong></p>
             <br>
             <p>Hulaan ang salita sa loob ng 6 na subok</p>
             <p>at matuto ng wikang Filipino.</p>
