Add favicon and correct HTML structure in login.html
Added a favicon link to the login page and ensured the HTML structure is correct.

--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Talahula</title>
+    <link rel="icon" type="image/png" href="talahulafinal.png">
     <style>
         /* --- KEEPING YOUR EXACT CSS --- */
         :root {
